--- a/lists/static/lists/tests/tests.html
+++ b/lists/static/lists/tests/tests.html
@@ -9,7 +9,7 @@
     <div id="qunit"></div>
     <div id="qunit-fixture">
         <form>
-           <input name="text" />
+           <input id="id_text" name="text" />
            <div class="has-error">Error text</div>
         </form>
     </div>
@@ -20,14 +20,26 @@
     <script src="../javascript/list.js"></script>
     <script>
 /*global $, test, equal */
+//1 issue with qunit---it dynamically reloads the DOM before each
+//test, meaning our jquery code wont be assigned to it
 test("errors should be hidden on keypress", function() {
-   $('input').trigger('keypress');
+   bind_key_and_click_handler();
+   $('#id_text').trigger('keypress');
    equal($('.has-error').is(':visible'), false);
 });
 
 test("errors should not be hidden unless there's a keypress", function(){
+    bind_key_and_click_handler();
     equal($('.has-error').is(':visible'),true); 
 });
+
+test("errors should be hidden on user click", function() {
+    bind_key_and_click_handler();
+   $('#id_text').trigger("click");
+   equal($('.has-error').is(':visible'),false);
+});
+
+
 
 /*
 test("basic test", function() {
